...
        static let addPassErrorAlertTitle = NSLocalizedString("AddPass.Error.Title", value: "Failed to Add Pass", comment: "Title of the 'Add Pass Failed' alert.")
        static let addPassErrorAlertMessage = NSLocalizedString("AddPass.Error.Message", value: "An error occured while adding the pass to Wallet. Please try again later.", comment: "Message of the 'Add Pass Failed' alert.")
        static let addPassErrorAlertDismiss = NSLocalizedString("AddPass.Error.Dismiss", value: "Ok", comment: "Button to dismiss the 'Add Pass Failed' alert.")
        static let authenticationReason = NSLocalizedString("Authentication.reason", value: "Authenticate to return to %@", comment: "%@ is the app name (for example “Firefox Focus” or ”Firefox Klar”). Prompt shown to ask the user to use Touch ID, Face ID, or passcode to continue browsing after returning to the app.")
        static let newSessionFromBiometricFailure = NSLocalizedString("BiometricPrompt.newSession", value: "New Session", comment: "Create a new session after failing a biometric check")
        static let browserBack = NSLocalizedString("Browser.backLabel", value: "Back", comment: "Accessibility label for the back button")
        static let browserForward = NSLocalizedString("Browser.forwardLabel", value: "Forward", comment: "Accessibility label for the forward button")
        static let browserReload = NSLocalizedString("Browser.reloadLabel", value: "Reload", comment: "Accessibility label for the reload button")
        static let browserSettings = NSLocalizedString("Browser.settingsLabel", value: "Settings", comment: "Accessibility label for the settings button")
        static let browserStop = NSLocalizedString("Browser.stopLabel", value: "Stop", comment: "Accessibility label for the stop button")
        static let copyURLToast = NSLocalizedString("browser.copyAddressToast", value: "URL Copied To Clipboard", comment: "Toast displayed after a URL has been copied to the clipboard")
        static let copyMenuButton = NSLocalizedString("Browser.copyMenuLabel", value: "Copy", comment: "Copy URL button in URL long press menu")
        static let eraseButton = NSLocalizedString("URL.eraseButtonLabel", value: "ERASE", comment: "Erase button in the URL bar")
        static let eraseMessage = NSLocalizedString("URL.eraseMessageLabel2", value: "Browsing history cleared", comment: "Message shown after pressing the Erase button")
        static let errorTryAgain = NSLocalizedString("Error.tryAgainButton", value: "Try again", comment: "Button label to reload the error page")
        static let externalLinkCancel = NSLocalizedString("ExternalLink.cancelButton", value: "Cancel", comment: "Button label in external link dialog to cancel the dialog. Test page: https://people-mozilla.org/~bnicholson/test/schemes.html")
        static let externalLinkEmail = NSLocalizedString("ExternalLink.emailButton", value: "Email", comment: "Button label in mailto: dialog to send an email. Test page: https://people-mozilla.org/~bnicholson/test/schemes.html")
        static let firstRunButton = NSLocalizedString("FirstRun.lastSlide.buttonLabel", value: "OK, Got It!", comment: "Label on button to dismiss first run UI")

        static let firstRunTitle = NSLocalizedString("FirstRun.messageLabelTagline", value: "Browse like no one’s watching.", comment: "Message label on the first run screen")
...
            value: "Daily Usage Ping",
            comment: "On the Settings screen, this is the title text for a toggle which controls automatically sending daily usage ping.")
        static let detailTextDailyUsagePing = NSLocalizedString(
            "Settings.DailyUsagePing.Message",
            value: "This helps Mozilla to estimate active users.",
            comment: "On the Settings screen, this is the subtitle text for a toggle which controls sending daily usage ping.")
        static let general = NSLocalizedString("Settings.general", value: "General", comment: "Title for section in settings menu")
        static let theme = NSLocalizedString("Settings.theme", value: "Theme", comment: "Theme section in settings menu")
        static let systemTheme = NSLocalizedString("Settings.systemTheme", value: "System Theme", comment: "System value for theme section in settings menu")
        static let useSystemTheme = NSLocalizedString("Settings.useSystemTheme", value: "Use System Light/Dark Mode", comment: "Value for theme toggle in settings menu")
        static let themePicker = NSLocalizedString("Settings.themePicker", value: "Theme Picker", comment: "Header for manual theme section in settings menu")
        static let light = NSLocalizedString("Settings.lightTheme", value: "Light", comment: "Light theme option in settings menu")
        static let dark = NSLocalizedString("Settings.darkTheme", value: "Dark", comment: "Dark theme option in settings menu")
...
        static let shareMenuRemoveFromShortcuts = NSLocalizedString("ShareMenu.RemoveFromShortcuts", value: "Remove from Shortcuts", comment: "Text for the share menu option when a user wants to remove the site from Shortcuts")
        static let removeFromShortcuts = NSLocalizedString("ShortcutView.RemoveFromShortcuts", value: "Remove from Shortcuts", comment: "Text for the long press on a shortcut option in context menu.")
        static let renameShortcut = NSLocalizedString("ShortcutView.Rename", value: "Rename Shortcut", comment: "Text for the long press on a shortcut rename option in context menu.")
        static let renameShortcutAlertPlaceholder = NSLocalizedString("ShortcutView.RenameShortcutAlertPlaceholder", value: "Shortcut name", comment: "Text for the placeholder textfield on rename shortcut alert.")
        static let renameShortcutAlertPrimaryAction = NSLocalizedString("ShortcutView.RenameShortcutAlertPrimaryAction", value: "Save", comment: "Text for the rename shortcut alert primary action.")
        static let renameShortcutAlertSecondaryAction = NSLocalizedString("ShortcutView.RenameShortcutAlertSecondaryAction", value: "Cancel", comment: "Text for the rename shortcut alert secondary action.")
        static let urlPaste = NSLocalizedString("URL.paste", value: "Paste", comment: "Text for a menu displayed from the bottom of the screen when a user long presses on the URL bar with clipboard contents.")
        static let urlPasteAndGo = NSLocalizedString("URL.contextMenu", value: "Paste & Go", comment: "Text for the URL context menu when a user long presses on the URL bar with clipboard contents.")
        static let copyAddress = NSLocalizedString("shareMenu.copyAddress", value: "Copy Address", comment: "Text for the share menu when a user wants to copy a URL.")
        static let share = NSLocalizedString("share", value: "Share", comment: "Text for a share button")
        static let trackersBlocked = NSLocalizedString("URL.trackersBlockedLabel", value: "Trackers blocked", comment: "Text for the URL bar showing the number of trackers blocked on a webpage.")
        static let connectionSecure = NSLocalizedString("trackingProtection.connectionSecureLabel", value: "Connection is secure", comment: "Text for tracking protection screen showing the connection is secure")
        static let connectionNotSecure = NSLocalizedString("trackingProtection.connectionNotSecureLabel", value: "Connection is not secure", comment: "Text for tracking protection screen showing the connection is not secure")
        static let trackersBlockedSince = NSLocalizedString("trackingProtection.trackersBlockedLabel", value: "Trackers blocked since %@", comment: "Text for tracking protection screen showing the number of trackers blocked since the app install. %@ is replaced with the install date of the application.")
...
